--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -4,9 +4,103 @@
     color: #fff;
 }
 
-.logo, .burger {
+.logo {
     background-color: #282c34;
     width: 50px;
     height: 50px;
     border-radius: 10px;
+}
+
+.main_menu {
+    margin-left: 50px;
+    flex-wrap: wrap;
+    background: rgb(49, 49, 49);
+    width: 40vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    padding: 55px;
+    transition: all .8s cubic-bezier(.77,.2,.05,1);
+    overflow-y: auto;
+}
+
+.main_menu_open {
+    right: 0;
+}
+
+.main_menu_close {
+    right: -61vw;
+}
+
+.close_menu {
+    position: fixed;
+    top: 33px;
+    opacity: 0;
+    visibility: hidden;
+    right: 29px;
+    z-index: -10;
+}
+
+.close_menu_open {
+    opacity: 1;
+    visibility: visible;
+    z-index: 9999;
+}
+
+.close_menu_close {
+    visibility: hidden;
+}
+
+.menutrigger {
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+}
+
+.menutrigger img {
+    height: 100%;
+    width: 100%;
+}
+
+.hamburger_menu {
+    padding-left: 20px;
+}
+
+.hamburger_menu_close {
+    visibility: hidden;
+}
+
+.hamburger_menu_open {
+    visibility: visible;
+}
+
+.closeTrigger {
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+}
+
+.closeTrigger img {
+    height: 100%;
+    width: 100%;
+}
+
+.photo {
+    width: 100%;
+}
+
+.nav_link a {
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.nav_link a:hover {
+    color: #ff814c;
+}
+
+.nav_link a.active_link {
+    color: #2effe7;
 }
