--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,3 +2,11 @@
   background-color: #b6b6b6;
   position: relative;
 }
+
+.spinner {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
+}
